--- a/templates/loadout.html
+++ b/templates/loadout.html
@@ -27,22 +27,22 @@
                     <div class="col bg-dark p-2 m-2">
                         <h3 class="display-3" >Support Weapon</h3>
                         <div class="form-check" id="support_weapon">
-                            <input type="checkbox" class="form-check-input" value="Railgun">
+                            <input type="radio" class="form-check-input" name="support_weapon" value="Railgun">
                             <label class="form-check-label">Railgun</label>
                             <br>
-                            <input type="checkbox" class="form-check-input" value="Arc Thrower">
+                            <input type="radio" class="form-check-input" name="support_weapon" value="Arc Thrower">
                             <label class="form-check-label">Arc Thrower</label>
                             <br>
-                            <input type="checkbox" class="form-check-input" value="Flamethrower">
+                            <input type="radio" class="form-check-input" name="support_weapon" value="Flamethrower">
                             <label class="form-check-label">Flamethrower</label>
                             <br>
-                            <input type="checkbox" class="form-check-input" value="Autocannon">
+                            <input type="radio" class="form-check-input" name="support_weapon" value="Autocannon">
                             <label class="form-check-label">Autocannon</label>
                             <br>
-                            <input type="checkbox" class="form-check-input" value="Stalwart">
+                            <input type="radio" class="form-check-input" name="support_weapon" value="Stalwart">
                             <label class="form-check-label">Stalwart</label>
                             <br>
-                            <input type="checkbox" class="form-check-input" value="Machine Gun">
+                            <input type="radio" class="form-check-input" name="support_weapon" value="Machine Gun">
                             <label class="form-check-label">Machine Gun</label>
                         </div>
                     </div>
@@ -51,22 +51,22 @@
                     <div class="col bg-dark p-2 m-2">
                         <h3 class="display-3">Orbitals & Strikes</h3>
                         <div class="form-check" id="orbital_airstrike">
-                            <input type="checkbox" class="form-check-input" value="Eagle Airstrike">
+                            <input type="radio" class="form-check-input" name="orbital_airstrike" value="Eagle Airstrike">
                             <label class="form-check-label">Eagle Airstrike</label>
                             <br>
-                            <input type="checkbox" class="form-check-input" value="Orbital Laser">
+                            <input type="radio" class="form-check-input" name="orbital_airstrike" value="Orbital Laser">
                             <label class="form-check-label">Orbital Laser</label>
                             <br>
-                            <input type="checkbox" class="form-check-input" value="Napalm Strike">
+                            <input type="radio" class="form-check-input" name="orbital_airstrike" value="Napalm Strike">
                             <label class="form-check-label">Napalm Strike</label>
                             <br>
-                            <input type="checkbox" class="form-check-input" value="Orbital Railcannon">
+                            <input type="radio" class="form-check-input" name="orbital_airstrike" value="Orbital Railcannon">
                             <label class="form-check-label">Orbital Railcannon</label>
                             <br>
-                            <input type="checkbox" class="form-check-input" value="Eagle Cluster Bomb">
+                            <input type="radio" class="form-check-input" name="orbital_airstrike" value="Eagle Cluster Bomb">
                             <label class="form-check-label">Eagle Cluster Bomb</label>
                             <br>
-                            <input type="checkbox" class="form-check-input" value="Eagle 500kg Bomb">
+                            <input type="radio" class="form-check-input" name="orbital_airstrike" value="Eagle 500kg Bomb">
                             <label class="form-check-label">Eagle 500kg Bomb</label>
                         </div>
                     </div>
@@ -90,22 +90,22 @@
                     <div class='col bg-dark p-2 m-2'>
                         <h3 class='display-3'>Sentry Turrets</h3>
                         <div class='form-check' id='sentry'>
-                            <input type='checkbox' class='form-check-input' value='Machine Gun Sentry'>
+                            <input type='radio' class='form-check-input' name="sentry" value='Machine Gun Sentry'>
                             <label class='form-check-label'>Machine Gun Sentry</label>
                             <br/>
-                            <input type='checkbox' class='form-check-input' value='Gatling Sentry'>
+                            <input type='radio' class='form-check-input' name="sentry" value='Gatling Sentry'>
                             <label class='form-check-label'>Gatling Sentry</label>
                             <br/>
-                            <input type='checkbox' class='form-check-input' value='Mortar Sentry'>
+                            <input type='radio' class='form-check-input' name="sentry" value='Mortar Sentry'>
                             <label class='form-check-label'>Mortar Sentry</label>
                             <br/>
-                            <input type='checkbox' class='form-check-input' value='Rocket Sentry'>
+                            <input type='radio' class='form-check-input' name="sentry" value='Rocket Sentry'>
                             <label class='form-check-label'>Rocket Sentry</label>
                             <br/>
-                            <input type='checkbox' class='form-check-input' value='Autocannon Sentry'>
+                            <input type='radio' class='form-check-input' name="sentry" value='Autocannon Sentry'>
                             <label class='form-check-label'>Autocannon Sentry</label>
                             <br/>
-                            <input type='checkbox' class='form-check-input' value='EMS Mortar Sentry'>
+                            <input type='radio' class='form-check-input' name="sentry" value='EMS Mortar Sentry'>
                             <label class='form-check-label'>EMS Mortar Sentry</label>
                         </div>
                     </div>
@@ -114,16 +114,16 @@
                     <div class='col bg-dark p-2 m-2'>
                         <h3 class='display-3'>Backpack Stratagems</h3>
                         <div class='form-check' id='backpack'>
-                            <input type='checkbox' class='form-check-input' value='Resupply Pack'>
+                            <input type='radio' class='form-check-input' name="backpack" value='Resupply Pack'>
                             <label class='form-check-label'>Resupply Pack</label>
                             <br/>
-                            <input type='checkbox' class='form-check-input' value='SH-20 Shield Generator Pack'>
+                            <input type='radio' class='form-check-input' name="backpack" value='SH-20 Shield Generator Pack'>
                             <label class='form-check-label'>SH-20 Shield Generator Pack</label>
                             <br/>
-                            <input type='checkbox' class='form-check-input' value='AD-334 Guard Dog'>
+                            <input type='radio' class='form-check-input' name="backpack" value='AD-334 Guard Dog'>
                             <label class='form-check-label'>AD-334 Guard Dog</label>
                             <br/>
-                            <input type='checkbox' class='form-check-input' value='AD-289 Guard Dog "Rover"'>
+                            <input type='radio' class='form-check-input' name="backpack" value='AD-289 Guard Dog "Rover"'>
                             <label class='form-check-label'>AD-289 Guard Dog "Rover"</label>
                         </div>
                     </div>
@@ -134,7 +134,29 @@
                 </div>
             </form>
 
-            <br/>
+            <br>
+            <div class="row text-center bg-dark p-2 m-2">
+                <h3 class="display-4">Selected Loadouts</h3>
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col">Support Weapon</th>
+                            <th scope="col">Orbital & Strike</th>
+                            <th scope="col">Sentry Turret</th>
+                            <th scope="col">Backpack Stratagem</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for row in data %}
+                        <tr>
+                            <td>{{ row[0] }}</td>
+                            <td>{{ row[1] }}</td>
+                            <td>{{ row[2] }}</td>
+                            <td>{{ row[3] }}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+            </div>
 
         </div>
     </main>
